# handheld_mapper

./: .gitignore  .gitmodules  README.md
scripts/: README.md  check_svo.py  handheld_live_mapping.sh  handheld_mapping_record_rosbag.sh  handheld_mapping_with_rviz.sh  handheld_sensor_record.sh  handheld_svo_record.sh  launch_fastlivo_recorder.desktop  launch_mapping.desktop  launch_sensor_recorder.desktop  launch_svo_recorder.desktop  nvpmodel.conf
src/FAST-LIVO2/: CMakeLists.txt  README.md  package.xml
src/FAST-LIVO2/Log/: imu.txt  mat_out.txt  mat_pre.txt
src/FAST-LIVO2/config/: HILTI22.yaml  MARS_LVIG.yaml  NTU_VIRAL.yaml  avia.yaml  camera_pinhole.yaml
src/FAST-LIVO2/include/: IMU_Processing.h  LIVMapper.h  common_lib.h  image_frame.h  preprocess.h  vio.h  voxel_map.h
src/FAST-LIVO2/launch/: mapping_avia.launch  mapping_avia.launch.py  mapping_avia_marslvig.launch  mapping_hesaixt32_hilti22.launch  mapping_ouster_ntu.launch
src/FAST-LIVO2/rviz_cfg/: M300.rviz  fast_livo2.rviz
src/FAST-LIVO2/scripts/: colmap_output.sh
src/FAST-LIVO2/src/: IMU_Processing.cpp  LIVMapper.cpp  image_frame.cpp  main.cpp  preprocess.cpp  vio.cpp  voxel_map.cpp
src/FAST-LIVO2/vikit_common/: CMakeLists.txt
src/FAST-LIVO2/vikit_common/include/: yaml_loader.h
src/SC-PGO/: CMakeLists.txt  package.xml
src/SC-PGO/config/: params.yaml  sc_pgo_params.yaml
src/SC-PGO/include/: KDTreeVectorOfVectorsAdaptor.h  Scancontext.cpp  Scancontext.h
src/SC-PGO/include/scancontext/: Scancontext.cpp  Scancontext.h
src/SC-PGO/launch/: sc_pgo.launch.py
src/SC-PGO/src/: laserPosegraphOptimization.cpp
src/handheld_bringup/: CMakeLists.txt  package.xml
src/handheld_bringup/FAST-LIVO2-Mid360-Config/config/: camera_pinhole_mid360.yaml  mid360.yaml
src/handheld_bringup/config/: MID360_config.json  hik_camera.yaml  hik_camera_fast_livo2.yaml  mcap_writer_options.yaml  mcap_writer_options_compression.yaml
src/handheld_bringup/config/fast-livo2/: camera_pinhole_mid360.yaml  mid360.yaml  mid360_offline.yaml
src/handheld_bringup/config/rviz/: fast_livo2.rviz  handheld_sensors.rviz  zed_view_svo.rviz
src/handheld_bringup/config/zed_config/: common_stereo.yaml  zed2i.yaml
src/handheld_bringup/launch/: camera_info_publisher.launch.py  fast_livo2.launch.py  fast_livo2_offline.launch.py  handheld_compressed.launch.py  handheld_compressed_svo.launch.py  handheld_livox_hik.launch.py  handheld_sensors.launch.py  replay_with_pgo.launch.py  zed_svo_replay.launch.py
src/handheld_bringup/scripts/: camera_info_publisher.py  zed_pose_to_tum.py
src/livox_ros_driver2/launch/: msg_MID360_launch.py  rviz_MID360_launch.py
src/livox_ros_driver2/src/: lddc.cpp  lddc.h
src/mvs_ros_driver2/: CMakeLists.txt  README.md  package.xml
src/mvs_ros_driver2/launch/: mvs_camera_trigger.launch.py
src/mvs_ros_driver2/rviz_cfg/: mvs_camera.rviz
src/mvs_ros_driver2/src/: grab_trigger.cpp
